# predictive-maintenance-mlops-system

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dashboards/powerbi/: README.md  data_model.json  measures.dax
dashboards/tableau/: README.md  calculated_fields.txt  workbook_spec.json
deploy/: cloudbuild.yaml  cloudrun-service.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
notebooks/: 01_data_exploration.py  02_model_analysis.py
src/: __init__.py  config.py  constants.py
src/api/: app.py  inference.py  routes.py  schemas.py
src/dashboards/: __init__.py  components.py  kpi_engine.py  web_dashboard.py  what_if.py
src/data/: __init__.py  ingestion.py  simulator.py  streaming.py  validation.py
src/evaluation/: __init__.py  comparison.py  cost_analysis.py  explainability.py  metrics.py
src/features/: __init__.py  engineering.py  labeling.py  selection.py
src/models/: __init__.py  anomaly.py  base.py  baseline.py  gradient_boosting.py  lstm.py  training.py
src/pipeline/: __init__.py  flows.py  schedules.py  tasks.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_data/: test_simulator.py  test_validation.py
tests/test_evaluation/: test_metrics.py
tests/test_features/: test_engineering.py  test_labeling.py
tests/test_models/: test_training.py
