[project]
name = "predictive-maintenance-mlops"
version = "1.0.0"
description = "Production-grade Predictive Maintenance System for industrial machinery"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ML Engineering Team"},
]

dependencies = [
    # Data processing
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",

    # Machine Learning
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "optuna>=3.6.0",

    # Deep Learning
    "torch>=2.2.0",

    # Explainability
    "shap>=0.45.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",

    # Orchestration
    "prefect>=2.14.0",

    # Dashboard
    "dash>=2.16.0",
    "plotly>=5.19.0",
    "dash-bootstrap-components>=1.5.0",

    # Utilities
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
